# packages/decent-offchain/src/api/index.ts
@@ -13,6 +13,7 @@ import proposals from '@/api/routes/dao.proposals';
 import comments from '@/api/routes/dao.comments';
 import points from '@/api/routes/points';
 import wallet from '@/api/routes/wallet';
+import splits from '@/api/routes/dao.splits';
 
 const app = new Hono();
 const { websocket } = createBunWebSocket();
@@ -56,6 +57,7 @@ app.route('/wallet', wallet);
 app.route('/d', dao);
 app.route('/d/:chainId/:address/proposals', proposals);
 app.route('/d/:chainId/:address/proposals/:slug/comments', comments);
+app.route('/d/:chainId/:address/splits', splits);
 
 export default {
   ...app,
